Imgs + Modificación de multiversos.html

--- a/multiversos.html
+++ b/multiversos.html
@@ -7,7 +7,7 @@
         <div class="max-w-7xl mx-auto flex justify-between items-center px-6 py-4">
             <h1 class="text-2xl font-extrabold text-[var(--marvel-red)]">M-Wiki</h1>
             <nav class="flex space-x-6 font-semibold text-gray-700">
-                <a href="personajes.html" class="hover:text-[var(--marvel-red)]">Personajes</a>
+                <a href="index.html" class="hover:text-[var(--marvel-red)]">Personajes</a>
                 <a href="multiversos.html" class="text-[var(--marvel-red)] font-bold">Multiversos</a>
                 <a href="comics.html" class="hover:text-[var(--marvel-red)]">Comics</a>
             </nav>
@@ -28,94 +28,70 @@
 
         <!-- Grid de tarjetas -->
         <div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
-            <!-- Multiverso 1 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/9/9c/Marvel_Universe_616_logo.png"
-                    alt="Tierra-616" class="w-full h-48 object-cover rounded-lg">
-                <h3 class="text-2xl font-bold mt-4">Tierra-616</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    La continuidad principal del Universo Marvel clásico, donde ocurren la mayoría de los cómics tradicionales.
-                </p>
+        <!-- Tierra-616 -->
+        <a href="tierra616.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <img src="https://lulo08.github.io/Pag.LJ/tierra616.jpg" 
+                 alt="Tierra-616" 
+                 class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                 onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+            <div class="p-4">
+                <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Tierra-616</h2>
+                <p class="text-gray-500 text-sm mt-1">El universo principal de Marvel Comics, hogar de los Vengadores originales y los X-Men clásicos.</p>
             </div>
 
-            <!-- Multiverso 2 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/8/8a/Ultimate_Marvel_logo.png"
-                    alt="Tierra-1610" class="w-full h-48 object-cover rounded-lg">
-                <h3 class="text-2xl font-bold mt-4">Tierra-1610 (Ultimate)</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Reimaginación moderna de héroes y orígenes, con historias más crudas y contemporáneas.
-                </p>
+        <!-- Tierra-1610 (Ultimate) -->
+        <a href="tierra1610.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <img src="https://lulo08.github.io/Pag.LJ/tierra1610.jpg" 
+                 alt="Tierra-1610" 
+                 class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                 onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+            <div class="p-4">
+                <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Tierra-1610 (Ultimate)</h2>
+                <p class="text-gray-500 text-sm mt-1">Un universo más moderno y realista donde surgen nuevas versiones de héroes, como Miles Morales.</p>
             </div>
 
-            <!-- Multiverso 3 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/3/30/Marvel_Cinematic_Universe_logo.png"
-                    alt="MCU" class="w-full h-48 object-cover rounded-lg">
-                <h3 class="text-2xl font-bold mt-4">MCU (Tierra-199999)</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Continuidad del Universo Cinematográfico Marvel, adaptada para cine y televisión.
-                </p>
+        <!-- MCU -->
+        <a href="mcu.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <img src="https://lulo08.github.io/Pag.LJ/mcu.jpeg" 
+                 alt="MCU" 
+                 class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                 onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+            <div class="p-4">
+                <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Universo Cinematográfico Marvel (MCU)</h2>
+                <p class="text-gray-500 text-sm mt-1">La versión cinematográfica del multiverso, donde Iron Man, Thor y Spider-Man comparten pantalla.</p>
             </div>
 
-            <!-- Multiverso 4 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/4/47/What_If%3F_Logo.svg"
-                    alt="What If" class="w-full h-48 object-cover rounded-lg bg-black">
-                <h3 class="text-2xl font-bold mt-4">What If...?</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Realidades alternativas que muestran cómo cambiarían los eventos clave del universo Marvel.
-                </p>
+        <!-- What If...? -->
+        <a href="whatif.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <img src="https://lulo08.github.io/Pag.LJ/whatif.jpg" 
+                 alt="What If...?" 
+                 class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                 onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+            <div class="p-4">
+                <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">What If...?</h2>
+                <p class="text-gray-500 text-sm mt-1">Universos alternativos donde pequeños cambios crean realidades completamente distintas.</p>
             </div>
 
-            <!-- Multiverso 5 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/f/f3/Spider-Verse_%282018_film%29_logo.png"
-                    alt="Spider-Verse" class="w-full h-48 object-cover rounded-lg">
-                <h3 class="text-2xl font-bold mt-4">Spider-Verse</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Realidades interconectadas donde existen múltiples variantes del Hombre Araña.
-                </p>
+        <!-- Spider-Verse -->
+        <a href="spiderverse.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <img src="https://lulo08.github.io/Pag.LJ/spiderverse.jpg" 
+                 alt="Spider-Verse" 
+                 class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                 onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+            <div class="p-4">
+                <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Spider-Verse</h2>
+                <p class="text-gray-500 text-sm mt-1">Una red de universos donde múltiples versiones de Spider-Man existen y colaboran entre sí.</p>
             </div>
 
-            <!-- Multiverso 6 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/4/47/Marvel_Zombies_logo.png"
-                    alt="Marvel Zombies" class="w-full h-48 object-cover rounded-lg bg-black">
-                <h3 class="text-2xl font-bold mt-4">Tierra-2149 (Marvel Zombies)</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Una plaga cósmica convierte a héroes y villanos en zombis caníbales.
-                </p>
-            </div>
-
-            <!-- Multiverso 7 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/2/24/Marvel_2099_logo.png"
-                    alt="Tierra-2099" class="w-full h-48 object-cover rounded-lg">
-                <h3 class="text-2xl font-bold mt-4">Tierra-2099</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Futuro distópico donde nuevas generaciones heredan los legados de los héroes clásicos.
-                </p>
-            </div>
-
-            <!-- Multiverso 8 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/f/f0/Amalgam_Comics_logo.png"
-                    alt="Fusión" class="w-full h-48 object-cover rounded-lg">
-                <h3 class="text-2xl font-bold mt-4">Multiverso de Fusión</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Realidades donde se mezclan héroes y universos, combinando elementos de distintas sagas.
-                </p>
-            </div>
-
-            <!-- Multiverso 9 -->
-            <div class="bg-white rounded-xl shadow hover:shadow-xl transition p-4">
-                <img src="https://upload.wikimedia.org/wikipedia/en/9/9d/Marvel_Comics_logo.svg"
-                    alt="Otras Tierras" class="w-full h-48 object-cover rounded-lg">
-                <h3 class="text-2xl font-bold mt-4">Otras Tierras</h3>
-                <p class="text-gray-600 text-sm mt-1">
-                    Incontables realidades paralelas, cada una con su propio equilibrio de héroes y villanos.
-                </p>
+        <!-- Tierra-2149 (Marvel Zombies) -->
+        <a href="tierra2149.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+            <img src="https://lulo08.github.io/Pag.LJ/zombies.jpg" 
+                 alt="Marvel Zombies" 
+                 class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
+                 onerror="this.onerror=null; this.src='https://placehold.co/600x400/000/fff?text=No+Image'">
+            <div class="p-4">
+                <h2 class="text-2xl font-bold text-gray-900 group-hover:text-red-600">Tierra-2149 (Zombies)</h2>
+                <p class="text-gray-500 text-sm mt-1">Un universo devastado por un virus que convierte a los héroes en versiones hambrientas de carne humana.</p>
             </div>
         </div>
     </main>
