--- a/multiversos.html
+++ b/multiversos.html
@@ -84,7 +84,7 @@
             </div>
 
         <!-- Tierra-2149 (Marvel Zombies) -->
-        <a href="tierra2149.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
+        <a href="zombies.html" class="block bg-white border border-gray-300 rounded-xl shadow-lg hover:shadow-xl transition duration-300 overflow-hidden group">
             <img src="https://lulo08.github.io/Pag.LJ/zombies.jpg" 
                  alt="Marvel Zombies" 
                  class="w-full h-48 object-cover transition duration-500 group-hover:scale-105"
