--- a/comics.html
+++ b/comics.html
@@ -100,7 +100,7 @@
         <a href="#" class="logo">M-Wiki</a>
         <nav>
             <a href="index.html">Personajes</a>
-            <a href="#">Multiversos</a>
+            <a href="multiversos.html">Multiversos</a>
             <a href="comics.html">Comics</a>
         </nav>
         <input type="text" class="search-bar" placeholder="Buscar en M-Wiki...">
