Imagenes para varios html de multiversos

--- a/mcu.html
+++ b/mcu.html
@@ -86,7 +86,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/0/0c/Marvel_Cinematic_Universe_logo.png" alt="MCU Logo">
+            <img src="https://lulo08.github.io/Pag.LJ/ucmpag.jpg" alt="MCU Logo">
             <p><strong>Designación Multiversal:</strong> Tierra-199999</p>
             <p><strong>Tipo de Universo:</strong> Adaptación Fílmica / Realista</p>
             <p><strong>Primera Producción:</strong> <em>Iron Man (2008)</em></p>
