--- a/spiderverse.html
+++ b/spiderverse.html
@@ -117,7 +117,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://upload.wikimedia.org/wikipedia/en/9/99/Spider-Verse_promo_art.jpg" alt="Spider-Verse">
+            <img src="https://lulo08.github.io/Pag.LJ/spiderversepag.jpg" alt="Spider-Verse">
             <p><strong>Designación:</strong> Multiverso Arácnido</p>
             <p><strong>Primera Aparición:</strong> Amazing Spider-Man #9 (2014)</p>
             <p><strong>Creador(es):</strong> Dan Slott y Olivier Coipel</p>
