--- a/tierra1610.html
+++ b/tierra1610.html
@@ -83,7 +83,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://upload.wikimedia.org/wikipedia/en/8/8a/Ultimate_Marvel_logo.png" alt="Tierra-1610">
+            <img src="https://lulo08.github.io/Pag.LJ/1610pag.jpg" alt="Tierra-1610">
             <p><strong>Designación:</strong> Earth-1610</p>
             <p><strong>Tipo de Universo:</strong> Alternativo / Modernizado</p>
             <p><strong>Primera Aparición:</strong> <em>Ultimate Spider-Man #1</em> (2000)</p>
