--- a/tierra616.html
+++ b/tierra616.html
@@ -83,7 +83,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://lulo08.github.io/Pag.LJ/tierra616.png" alt="Tierra-616">
+            <img src="https://lulo08.github.io/Pag.LJ/616pag.jpg" alt="Tierra-616">
             <p><strong>Designación:</strong> Earth-616</p>
             <p><strong>Tipo de Universo:</strong> Continuidad principal</p>
             <p><strong>Primera Aparición:</strong> <em>Captain Britain #8</em> (1977)</p>
