--- a/whatif.html
+++ b/whatif.html
@@ -111,7 +111,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://upload.wikimedia.org/wikipedia/en/5/5d/What_If...?_%28TV_series%29_logo.png" 
+            <img src="https://lulo08.github.io/Pag.LJ/whatifpag.jpg" 
                  alt="What If...?">
             <p><strong>Tipo:</strong> Serie Animada Multiversal</p>
             <p><strong>Creación:</strong> A.C. Bradley</p>
