--- a/zombies.html
+++ b/zombies.html
@@ -110,7 +110,7 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://upload.wikimedia.org/wikipedia/en/9/91/Marvel_Zombies_1_cover.jpg" alt="Marvel Zombies">
+            <img src="https://lulo08.github.io/Pag.LJ/zombiespag.jpg" alt="Marvel Zombies">
             <p><strong>Designación Multiversal:</strong> Tierra-2149</p>
             <p><strong>Tipo de Universo:</strong> Post-apocalíptico / Horror</p>
             <p><strong>Primera Aparición:</strong> Ultimate Fantastic Four #21 (2005)</p>
