--- a/cuatro_fantasticos.html
+++ b/cuatro_fantasticos.html
@@ -159,7 +159,7 @@
             <h2>Miembros del Equipo</h2>
             
             <div class="member-profile">
-                <img src="https://lulo08.github.io/Pag.LJ/img/redrichardsss.jpg"
+                <img src="https://lulo08.github.io/Pag.LJ/img/readrichardsss.jpg"
                      alt="Reed Richards">
                 <h3>Reed Richards (Mr. Fantástico)</h3>
                 <p><strong>Poder:</strong> Elasticidad y Múltiple-Forma. Puede estirar, deformar y moldear su cuerpo a voluntad.</p>
