--- a/guardianes_galaxia.html
+++ b/guardianes_galaxia.html
@@ -173,7 +173,8 @@
             </div>
             
             <div class="member-profile">
-                <img src="https://static.wikia.nocookie.net/heroes-and-villain/images/f/f2/Drax_AIW_Profile.jpg/revision/latest?cb=20190503222212">
+                <img src="https://lulo08.github.io/Pag.LJ/img/draxxx.jpg"
+                     alt="Drax el destructor">
                 <h3>Drax el Destructor</h3>
                 <p><strong>Especie:</strong> Desconocida (anteriormente humano, resucitado y transformado para cazar a Thanos).</p>
                 <p><strong>Habilidad Clave:</strong> Súper fuerza, durabilidad y un deseo implacable de venganza (aunque su objetivo ha cambiado).</p>
