--- a/thanos.html
+++ b/thanos.html
@@ -118,7 +118,8 @@
         </header>
 
         <aside class="info-box">
-            <img src="https://static.wikia.nocookie.net/villano/images/9/9d/Thanos.webp/revision/latest?cb=20200726162543&path-prefix=es">
+            <img src="https://lulo08.github.io/Pag.LJ/img/thanosss.jpg"
+                     alt="Thanos">
             <p><strong>Nombre Real:</strong> Thanos</p>
             <p><strong>Estatus:</strong> Conquistador Galáctico, Filósofo, Amenaza Universal</p>
             <p><strong>Especie:</strong> Titán (mutante Deviante)</p>
