--- a/xmen.html
+++ b/xmen.html
@@ -159,7 +159,8 @@
             <h2>Miembros Clave</h2>
             
             <div class="member-profile">
-                <img src="https://static.wikia.nocookie.net/universo-cinematografico-de-xmen/images/a/ac/Profesor_X2.png/revision/latest?cb=20160903194503&path-prefix=es">
+                <img src="https://lulo08.github.io/Pag.LJ/img/profeee.jpg"
+                     alt="Profesor X">
                 <h3>Profesor X (Charles Xavier)</h3>
                 <p><strong>Poder:</strong> Telepatía a nivel Omega. Una de las mentes más poderosas del planeta.</p>
                 <p><strong>Rol:</strong> Fundador, mentor y pacifista. Lucha por el "Sueño de Xavier": la paz mutante-humana.</p>
@@ -173,7 +174,8 @@
             </div>
             
             <div class="member-profile">
-                <img src="https://static.wikia.nocookie.net/marvelcrossroads/images/c/cf/JEAN_GREY_EARTH_M.jpg/revision/latest/scale-to-width-down/340?cb=20150329205049">
+                <img src="https://lulo08.github.io/Pag.LJ/img/jeannn.jpg"
+                     alt="Jean Grey">
                 <h3>Jean Grey (Fénix)</h3>
                 <p><strong>Poder:</strong> Telequinesis y Telepatía. Una de las mutantes más poderosas, también es el huésped frecuente de la fuerza cósmica del Fénix.</p>
                 <p><strong>Rol:</strong> Poderosa heroína, clave en la dinámica del equipo.</p>
