--- a/multiversos.html
+++ b/multiversos.html
@@ -96,6 +96,9 @@
         </div>
     </main>
   <footer class="bg-gray-200 text-gray-600 text-xs py-4 mt-8">
+    <p>
+        Para más información, consulta la <a href="https://marvel.fandom.com/es/wiki/P%C3%A1gina_principal">Wiki Marvel oficial</a>.
+    </p>
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
           <p>&copy; 2025 M-Wiki. Todos los derechos reservados. | Esta página es un ejemplo de diseño web y no es un sitio web oficial de Marvel.</p>
       </div>
